NEW: Create RequestAPI to handle requests to OpenWeatherAPI Volley library added, used for requests Dummy button and data used for testing purposes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Weather App</string>
+    <string name="OPENWEATHER_API_KEY">4606210c7b69078ba88b2c9b8c9deaa5</string>
 </resources>
